# software-tool

./: .env  .gitignore  ARCHITECTURE.md  README.md  Release_2_SRS.docx  celery_app.py  cli.py  compliance_architecture_ppt (1).pptx  compliance_architecture_slide_4.pptx  debug_api.py  docker-compose.yml  fetch_github.py  final_ppt.pptx  kill_ports.py  main.py  package-lock.json  project_report.md  pyproject.toml  report.txt  requirements.txt  sample_rules.yaml  sample_violating_code.py  server.py  test_fastapi.py  test_model.py  verify_acep.py  worker.py
.github/workflows/: compliance.yml
docs-and-plans/: API_AND_MODELS.md  FILE_BY_FILE_BREAKDOWN.md  FLASK_INTEGRATION_REPORT.md  MODULES_AND_DEPENDENCIES.md  Phase2_SRS_PromptGuard_v2.docx
examples/: rules.yaml  violation_test.py
examples/sample_project/: train.py
fetched_content/: file1.txt  file10.txt  file11.txt  file12.txt  file13.txt  file14.txt  file15.txt  file16.txt  file17.txt  file18.txt  file19.txt  file2.txt  file20.txt  file21.txt  file22.txt  file23.txt  file24.txt  file25.txt  file26.txt  file27.txt  file28.txt  file29.txt  file3.txt  file30.txt  file31.txt  file32.txt  file33.txt  file34.txt  file35.txt  file36.txt  file37.txt  file38.txt  file39.txt  file4.txt  file40.txt  file41.txt  file42.txt  file43.txt  file44.txt  file45.txt  (+22 more)
frontend/src/app/: page.tsx
literature-review/: SOTA_Code_Embedding_Models_Report-v2.docx  SOTA_Code_Embedding_Models_Report-v3.docx  SOTA_Code_Embedding_Models_Report.md  SOTA_Code_Embedding_Models_Report_v1.docx
src/: audit.py  semantic_chunker.py
src/compliance_checker/: __init__.py  __main__.py  analyzer.py  cli.py  codebase_loader.py  github_loader.py  models.py  pdf_rule_extractor.py  rules_loader.py  test_analyzer.py  vector_store.py
src/rules_parser/: rules_vector_db.py
src/rules_parser/chroma_langchain_db/: chroma.sqlite3
tests/: test_hyde.py  test_pdf_rule_extractor.py  test_semantic_chunker.py
webapp/: app.js  bouncing-icons.js  index.html  styles.css
