[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "compliance-checker"
version = "0.1.0"
description = "AI-powered dataset usage compliance checker"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.0.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "gitingest>=0.1.0",
    "python-dotenv>=1.0.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "pypdf>=4.0.0",
    "langchain>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "langchain-google-genai>=2.0.0",
    "langchain-text-splitters>=0.3.0",
    "qdrant-client>=1.9.0",
    "langchain-qdrant>=0.1.0",
    "sentence-transformers>=3.0.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "celery>=5.3.6",
    "redis>=5.0.1",
    "websockets>=12.0",
    "python-multipart>=0.0.9"
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
